<resources>
    <string name="app_name">OutDork</string>
    <string name="welcome">Welcome to Outdork</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_have_pushed_somthing_worthwhile">I have pushed something worthwhile</string>

    <!--Titles/labels-->
    <string name="discoveries">Discoveries</string>
    <string name="following">Following</string>
    <string name="newActivity">New Activity</string>
    <string name="add_activity">Find activity</string>
    <string name="settings">Settings</string>
    <string name="add_new_activity">Add new activity</string>
    <string name="about">About</string>
    <string name="favorites">Favorites</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="help">Help</string>
    <string name="report">Report</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset Password</string>

    <!--Menu items-->
    <string name="favoritesMenuItem">Favorites</string>
    <string name="bookmarksMenuItem">Bookmarks</string>
    <string name="helpMenuItem">Help</string>
    <string name="reportMenuItem">Report</string>
    <string name="settingsMenuItem">Settings</string>
    <string name="aboutMenuItem">About</string>

    <!-- Bottom Nav -->
    <string name="following_nav">Following</string>
    <string name="new_activity">New activity</string>
    <string name="home_nav">Home</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Hints -->
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="password_hint2">Confirm Password</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="user_name_hint">User Name</string>
    <string name="dob_hint">Select Your Birth Date</string>
    <string name="location_hint">City</string>
    <string name="country_hint">Country</string>
    <string name="state_hint">State/Providence</string>
    <string name="post_hint">Post</string>


    <!-- Messages -->
    <string name="welcome_message">Get Outside and Be Dorky!</string>


    <string name="sign_out">Sign out</string>
    <string name="feeds">Feeds</string>
    <string name="following_menu_item">Following</string>


    <!-- Settings -->
    <string name="settings_layout" translatable="false">Layout</string>
    <string name="settings_theme" translatable="false">Dark theme</string>

    <!-- Facebook -->
    <string name="facebook_app_id">2780512052212717</string>
    <string name="fb_login_protocol_scheme">fb2780512052212717</string>
    <string name="_8942">⋮</string>
    <string name="favourite_option_menu_item">Favourite</string>
    <string name="add_to_bookmark_option_menu">Add to bookmark</string>
    <string name="share_option_menu">Share</string>
    <string name="report_option_menu">Report</string>
    <string name="date_sample">11/04/21</string>
    <string name="image">IMAGE</string>
    <string name="comment">COMMENT</string>
    <string name="search_button">Search</string>
    <string name="activity_content">Activity content</string>
    <string name="post_hintFB">Make a new post</string>
    <string name="post_action">Post</string>

    <!-- places sdk -->
    <string name="places_api">AIzaSyD5j72Gj-fVrhakRcmVZkEevRgAqdQtggE</string>
    <string name="search_location">Search location</string>
    <string name="seekbar_min">500</string>
    <string name="seekbar_max">5000</string>
    <string name="seekbar_mid">2750</string>
    <string name="select_button">Select</string>
    <string name="activity_name">Activity name</string>
    <string name="dummy_distance">202KM</string>
    <string name="dummy_time">1hr 30mins</string>

    <!-- Permissions -->
    <string name="permission_result_pending">Waiting for result…</string>
    <string name="permission_result_granted">Permission granted!</string>
    <string name="permission_result_denied">Permission denied :(</string>
    <string name="custom_contract_result">Success: %b, message: %s</string>
    <string name="newPost">Create new post</string>


</resources>
