<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/discoveries_fragment"
        android:name="dev.samuelmcmurray.ui.discoveries.DiscoveriesFragment"
        android:label="@string/discoveries"
        tools:layout="@layout/discoveries_fragment" />
    <fragment
        android:id="@+id/followingFragment"
        android:name="dev.samuelmcmurray.ui.following.FollowingFragment"
        android:label="@string/following"
        tools:layout="@layout/fragment_following" />
    <fragment
        android:id="@+id/newActivityFragment"
        android:name="dev.samuelmcmurray.ui.new_activity.NewActivityFragment"
        android:label="@string/newActivity"
        tools:layout="@layout/fragment_new_activity" />
    <fragment
        android:id="@+id/favouritesFragment"
        android:name="dev.samuelmcmurray.ui.favorites.FavoritesFragment"
        android:label="Favourites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/bookmarksFragment"
        android:name="dev.samuelmcmurray.ui.bookmarks.BookmarksFragment"
        android:label="Bookmarks"
        tools:layout="@layout/fragment_bookmarks" />
    <fragment
        android:id="@+id/helpFragment"
        android:name="dev.samuelmcmurray.ui.help.HelpFragment"
        android:label="Help"
        tools:layout="@layout/fragment_help" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="dev.samuelmcmurray.ui.settings.SettingsFragment"
        android:label="Settings" />
    <fragment
        android:id="@+id/reportFragment"
        android:name="dev.samuelmcmurray.ui.report.ReportFragment"
        android:label="Report"
        tools:layout="@layout/fragment_report" />
    <fragment
        android:id="@+id/addNewActivityFragment"
        android:name="dev.samuelmcmurray.ui.add_new_activity.AddNewActivityFragment"
        android:label="Add new activity"
        tools:layout="@layout/fragment_add_new" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="dev.samuelmcmurray.ui.about.AboutFragment"
        android:label="AboutFragment"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="dev.samuelmcmurray.ui.auth.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />

</navigation>